Tue Mar 16 11:39:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
          Don't need to check for the existence of a ContentFilteredTopic.
          It's now ok to just delete the existent DataReader.

        * connectors/dds4ccm/impl/dds/DataReader.cpp:
          Implemented get_topicdescription.

        * connectors/dds4ccm/impl/dds/Reader_T.h:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
          Rewritten ContentFilteredTopic implementation using
          just the DDS entities.

Mon Mar 15 20:21:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.h:
          Const change

        * ciao/Logger/Log_Macros.h:
        * connectors/dds4ccm/impl/logger/Log_Macros.h:
        * DAnCE/Logger/Log_Macros.h:
          Disable tracing by default

        * connectors/ami4ccm/ami4ccm/ami4ccm.mpc:
          Added svnt macros

Mon Mar 15 15:20:10 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/performance-tests/LatencyTT/Receiver/LatencyTT_Test_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/LatencyTT/SecConnector/LatencyTT_TestSec_Connector.mpc:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender.mpc:
        Changed too long project names.

Mon Mar 15 14:14:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl:
        * connectors/dds4ccm/idl/dds_rtf2_dcps_i_handle.idl:
        * connectors/dds4ccm/idl/dds_rtf2_dcps_instance_handle.idl:
        * connectors/dds4ccm/impl/dds/Coherent_Changes_Guard.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp: